# WunderLINQ-Insta360-iOS

./: .gitignore  Podfile  README.md  WunderLINQ_Insta360-Bridging-Header.h
Frameworks/INSCoreMedia.xcframework/ios-arm64/INSCoreMedia.framework/: CMakeLists.txt  Info.plist  json_valueiterator.inl
Frameworks/INSCoreMedia.xcframework/ios-arm64/INSCoreMedia.framework/Headers/: INS120FPSThumbnailRender.h  INS3DLutFilter.h  INS3DObject.h  INS3DPlanetGenerator.h  INSAIRawImageGenerator.h  INSARPlayer.h  INSAVPlayer.h  INSAnimation.h  INSAnimationRecorder.h  INSAnimationState.h  INSAppletWrapData.h  INSAsteroidAnimation.h  INSAudioExtractor.h  INSAudioInfoParser.h  INSAudioSample.h  INSAudioSplitExporter.h  INSAutoEditRecommender.h  INSAutoEditorConfigurations.h  INSAutoEditorUtils.h  INSAutoFindAnimation.h  INSBgm.h  INSBgmClip.h  INSBgmSource.h  INSBigboomRecorder.h  INSBitmapData.h  INSBlender.h  INSBulletTimeMotion.h  INSBulletTimePeriod.h  INSCamera.h  INSCameraFlipMotion.h  INSCinelapseAnimation.h  INSCinelapseWarpData.h  INSClassifierTracker.h  INSClip.h  INSClipConfig.h  INSCloneGeneratorConfiguration.h  INSCloneGeneratorProcotol.h  INSCloneShadowGenerator.h  INSCloneTrailGenerator.h  INSCollageDanceGenerator.h  (+334 more)
Frameworks/INSCoreMedia.xcframework/ios-arm64/INSCoreMedia.framework/Modules/: module.modulemap
WunderLINQ-Insta360/: AboutViewController.swift  AppDelegate.swift  Atomic.swift  CameraError.swift  CameraListController.swift  CentralManager.swift  (+10 more)
WunderLINQ-Insta360.xcodeproj/: project.pbxproj
WunderLINQ-Insta360.xcworkspace/: contents.xcworkspacedata
(+94 files in other folders)
